# rotex-core

./: Cargo.toml  build.rs
examples/: cube.rs  cube_to_texture_png.rs  headless.rs  triangle.rs  window.rs
src/: backend.rs  command.rs  core.rs  descriptor.rs  device.rs  error.rs  framebuffer.rs  image.rs  lib.rs  pass.rs  swapchain.rs  sync.rs
src/bridge/: mod.rs
src/frontend/: engine.rs  graphics_context.rs  mod.rs
src/graphics_pipeline/: layout.rs  mod.rs  pipeline.rs  shader.rs  state.rs  vertex.rs
